src/test/deca/syntax/valid/modulo_any_modulo_any_modulo_any.deca
// Description :
//
//      Test syntaxiquement correct de la modulo d'un any et d'un any puis en sommant un autre any dans une variable float.
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
   float y= 3 % "bonjour" % 2.5;
}