src/test/deca/syntax/invalid/class_this.deca
// Description :
// 
//      Test incorrect d'une classe nommée this
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 19/06/2023 par gl03

class this {
    
}